--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch code
-      - uses: actions/checkout@v3
-    
+        uses: actions/checkout@v3
+
       - name: Run Lint
         run: ./gradlew lintDebug
 
