--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,25 @@ jobs:
       - name: Run Lint
         run: ./gradlew lintDebug
 
-      - name: Upload html test report
+      - name: Upload lint report
         uses: actions/upload-artifact@v3
         with:
-          name: index.html
+          name: lint_report.html
           path: app/build/reports/lint-results-debug.html
+
+# Unit test
+    unit-test:
+      needs: [lint]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout branch code
+          uses: actions/checkout@v3
+
+        - name: Run Tests
+          run: ./gradlew test
+
+        - name: Upload test report
+          uses: actions/upload-artifact@v3
+          with:
+              name: unit_test_report.html
+              path: app/build/reports/tests/testDebugUnitTest/
