--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,11 @@ jobs:
       - name: Checkout branch code
         uses: actions/checkout@v3
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
       - name: Run intrumented tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -60,3 +65,23 @@ jobs:
         with:
           name: instrumented_test_report.html
           path: app/build/reports/androidTests/connected/
+
+
+  # Sonar Qube Code Analysis
+  sonarcloud-code-analysis:
+    needs: [instrumented-test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout branch code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: SonarCloud Scan
+        run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        env:
+          GITHUB_TOKEN: { { secrets.GITHUB_TOKEN } }
+
