--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,5 +83,5 @@ jobs:
       - name: SonarCloud Scan
         run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
-          GITHUB_TOKEN: { { secrets.GITHUB_TOKEN } }
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
