--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+#      # Just Echo Message to run avoid Git Actions
+#      - name: Instrumented Test Started
+#        run: echo Instrumented Test Started
+
       - name: Checkout branch code
         uses: actions/checkout@v3
 
@@ -29,6 +33,10 @@ jobs:
     needs: [lint]
     runs-on: ubuntu-latest
     steps:
+#      # Just Echo Message to run avoid Git Actions
+#      - name: Instrumented Test Started
+#        run: echo Instrumented Test Started
+
       - name: Checkout branch code
         uses: actions/checkout@v3
 
@@ -46,6 +54,10 @@ jobs:
     needs: [unit-test]
     runs-on: macos-latest
     steps:
+#      # Just Echo Message to run avoid Git Actions
+#      - name: Instrumented Test Started
+#        run: echo Instrumented Test Started
+
       - name: Checkout branch code
         uses: actions/checkout@v3
 
@@ -72,6 +84,10 @@ jobs:
     needs: [instrumented-test]
     runs-on: ubuntu-latest
     steps:
+#      # Just Echo Message to run avoid Git Actions
+#      - name: SonarCloud Check Started
+#        run: echo SonarCloud Check Started
+
       - name: Checkout branch code
         uses: actions/checkout@v3
 
@@ -85,3 +101,27 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+
+  # Package Debug APK
+  package-debug-apk:
+    needs: [sonarcloud-code-analysis]
+    name: Generate Debug APK
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout branch code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload debug APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: tictactoe.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
