--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-systemProp.sonar.sources=.src/main
+systemProp.sonar.sources=./src/main
 systemProp.sonar.host.url=https://sonarcloud.io/
 systemProp.sonar.organization=yuvipatel003
 systemProp.sonar.projectKey=yuvipatel003_TicTacToe
